--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "untifted"
 version = "0.1.0"
 edition = "2021"
+default-run = "untifted"
 
 [dependencies]
 bevy = { version = "0.15.1", features = ["dynamic_linking"] }
